source/content-script/switch/index.css
.lindy-domain-switch {
    position: absolute !important;
    top: 0;
    right: 0;
    z-index: 300;
}

.lindy-domain-switch {
    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
        "Segoe UI", Roboto !important;
    font-size: medium !important;
    font-weight: 500 !important;
    text-align: right !important;
    color: #1f2937 !important;
    cursor: auto !important;
    padding: 15px !important;
    margin: 0 !important;

    display: flex !important;
    justify-content: flex-end !important;
    gap: 5px !important;
}

/* switch adapted from https://codepen.io/sajran/pen/dMKvpb */
.lindy-domain-switch > .lindy-switch {
    display: inline-block !important;
    position: relative !important;

    --bg-disabled-color: rgba(0, 0, 0, 0.26);
    --bg-enabled-color: rgba(63, 81, 181, 0.5);
    --lever-disabled-color: #fff;
    --lever-enabled-color: #3f51b5;
}
.lindy-domain-switch > .lindy-switch > input {
    position: absolute !important;
    border: none !important;
    top: 0;
    left: 0;
    width: 36px;
    height: 20px;
    opacity: 0;
    z-index: 0;
}
/* Unchecked */
.lindy-domain-switch > .lindy-switch > label {
    display: block;
    padding: 0 0 0 35px;
    cursor: pointer;
}
.lindy-domain-switch > .lindy-switch > label::before {
    content: "";
    position: absolute;
    top: 3px;
    left: 0;
    width: 36px;
    height: 14px;
    background-color: var(--bg-disabled-color);
    border-radius: 14px;
    border: none !important;
    z-index: 1;
    transition: background-color 0.28s cubic-bezier(0.4, 0, 0.2, 1);
    transform: none !important;
}
.lindy-domain-switch > .lindy-switch > label::after {
    content: "";
    position: absolute;
    top: 0px;
    left: 0;
    width: 20px;
    height: 20px;
    background-color: var(--lever-disabled-color);
    border-radius: 14px;
    border: none !important;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
        0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
    z-index: 2;
    transition: all 0.28s cubic-bezier(0.4, 0, 0.2, 1);
    transition-property: left, background-color;
    transform: none !important;
    opacity: 1 !important;
}
/* Checked */
.lindy-domain-switch > .lindy-switch > input:checked + label::before {
    background-color: var(--bg-enabled-color);
}
.lindy-domain-switch > .lindy-switch > input:checked + label::after {
    left: 16px;
    background-color: var(--lever-enabled-color);
}

@media (prefers-color-scheme: dark) {
    .lindy-domain-switch {
        color: #d1d5db;
        background: transparent;
    }
}
@media (max-width: 1200px) {
    .lindy-domain-switch > span > #domain {
        display: none;
    }
}

